[package]
name = "pasabuy"
version = "0.1.0"
edition = "2021"
description = "Trustless cross-border escrow for informal pasabuy (buy-on-behalf) transactions on Stellar"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "22.0.7", features = ["alloc"] }

[dev-dependencies]
soroban-sdk = { version = "22.0.7", features = ["testutils", "alloc"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true